<resources>
    <string name="app_name">light breeze</string>
    <string name="tips">tips</string>
    <string name="isrootmodestr">Now is root user  , and auto active app to  root mode .</string>
    <string name="general_tips">Tips [ General Mode ]</string>
    <string name="general_tips_str_head">"The software cannot be used normally in the current environment. (If you have a lower version of Android, please switch to magisk when using root authorization, otherwise you can only use adb mode and cannot activate root mode)\n\nPlease run the following script through adb to activate adb mode:\n\n sh  "</string>
    <string name="general_tips_str_end">\nOnce the activation script has been successfully executed, click Exit from the top right corner of the software and reopen the software.\n</string>
    <string name="options_menu_help_str">Help</string>
    <string name="options_menu_full_exit">Force Exit</string>
    <string name="options_menu_exit">Exit</string>
    <string name="show_help_title">Help Document</string>
    <string name="show_help_getAppPermissonHELP">\nThis interface is used to control the permissions of the program, because since Android 5, the permissions of the program have been taken over by AppOPS, so everything done here is based on the IAppOpsService service.\n\n1. The menu in the upper right corner can get the application of the current device administrator.\n        2. The left side shows the permission names with Chinese, they are a whole, allowing you to operate multiple permissions or permission groups at once.\n        3. On the right is the case of configuring permissions, you can choose default, deny, allow, ignore, etc., which may not take effect immediately, and need to rely on the special nature of the customized operating system.\n        4. There is an option in the lower left corner, which allows you to select a batch or a single application to change the permissions.\n        5. In the lower right corner is the button to change permissions, all operations will be done here.\n        6. Click on the program entry in the list, it will automatically jump to the program information interface, this part needs to be in ROOT mode to use normally.\n        7. The magnifying glass on the left side of the above menu is used to retrieve the application, and the corresponding program list can be retrieved by entering Chinese and English.\n        8. Click on the icon in the top left corner to go back to the previous menu.\n\n</string>
    <string name="show_help_getAppInfoHELP">\nThis interface is used to manage the services, active items, and broadcast receiver components of a single application, and the functional implementation here is based on the IPackageManager service, which requires the ROOT mode.\n\n1. The menu in the upper right corner can get the detailed information of each component of the current program.\n        2. The options in the lower left corner can select batches and individual entries to perform change operations.\n        3. After the button in the lower right corner is clicked, the corresponding rule will be executed.\n        4. The magnifying glass on the left side of the above menu is used to retrieve applications, and the corresponding program list can be retrieved by entering Chinese and English.\n        5. Click on the icon in the top left corner to go back to the previous menu.\n\nPS: The switches of some entries may show errors, but they are working and executing normally, click the switch, the status becomes off, the closed operation will be performed normally, the status becomes on, it will become the open operation, you can use it with confidence.\n\n</string>
    <string name="show_help_getAppDsiableCompentHELP">\nThis interface is used to disable, close, and freeze programs, and is based on the IPackageManager service.\n\n1. The menu in the upper right corner can get the program of the current host administrator.\n        2. The option on the right can choose to enable or disable the app.\n        3. There is an option in the lower left corner, which allows you to operate in batches and in a single selection.\n        4. The button in the bottom right corner will execute the rule parameters you have selected before.\n        5. Click on the program entry in the list, it will automatically jump to the program information interface, this part needs to be in ROOT mode to use normally.\n        6. The magnifying glass on the left side of the above menu is used to retrieve the application, enter Chinese and English to retrieve the corresponding program list.\n        7. Click on the icon in the top left corner to go back to the previous menu.\n\n</string>
    <string name="show_help_getAppFirewallHELP">\nThis interface is used to manage the program network, and is implemented based on invoking system commands, which must be in Shizuku mode.\n\n1. The menu in the upper right corner can get the program of the host administrator.\n        2. On the right, you can choose to allow or disable the network.\n        3. In the lower left corner, you can select batch or single item to control the network.\n        4. The button in the lower right corner, after being clicked, will execute the corresponding rules and parameters.\n        5. Click on the program entry in the list, it will automatically jump to the program information interface, this part needs to be in ROOT mode to use normally.\n        6. The magnifying glass on the left side of the above menu is used to retrieve the application, enter Chinese and English to retrieve the corresponding program list.\n        7. Click on the icon in the top left corner to go back to the previous menu.\n\n</string>
    <string name="show_help_getAppInstallLocalFileHELP">\nThis interface is used to install local apk packages and is implemented based on the IPackageManager service.\n\n1. The menu in the upper right corner can get the program of the host administrator.\n        2. On the right, you can choose the local apk program installation package file, or you can choose the local work folder to store the installation package.\n        3. In the lower left corner, you can select batch and single item.\n        4. The button in the lower right corner, after being clicked, will execute the corresponding rules and parameters.\n        5. Click on the program entry in the list, it will automatically jump to the program information interface, this part needs to be in ROOT mode to use normally.\n        6. The magnifying glass on the left side of the above menu is used to retrieve the application, enter Chinese and English to retrieve the corresponding program list.\n        7. Click on the icon in the top left corner to go back to the previous menu.\n\n</string>
    <string name="show_help_getAppDumpHELP">\nThis interface is used to extract the local program installation files, and is implemented based on the system API service.\n\n1. The menu in the upper right corner can get the program of the host administrator.\n        2. You can choose the package name, program name, and extraction time on the right, which is used to save the extracted program installation files, and the extracted files are stored in the /easyManager/dump folder under the internal storage.\n        3. In the lower left corner, you can select batch and single item.\n        4. The button in the lower right corner, after being clicked, will execute the corresponding rules and parameters.\n        5. Click on the program entry in the list, it will automatically jump to the program information interface, this part needs to be in ROOT mode to use normally.\n        6. The magnifying glass on the left side of the above menu is used to retrieve the application, enter Chinese and English to retrieve the corresponding program list.\n        7. Click on the icon in the top left corner to go back to the previous menu.\n\n</string>
    <string name="show_help_getUninstallHELP">\nThis interface is used to delete local programs and is implemented based on the IPackageManager service.\n\n1. The menu in the upper right corner can get the program of the host administrator.\n        2. In the lower left corner, you can choose batch and single item.\n        3. The button in the lower right corner, after being clicked, will execute the corresponding rules and parameters.\n        4. Click on the program entry in the list, it will automatically jump to the program information interface, this part needs to be in ROOT mode to use normally.\n        5. The magnifying glass on the left side of the above menu is used to retrieve the application, and the corresponding program list can be retrieved by entering Chinese and English.\n        6. Click on the icon in the top left corner to go back to the previous menu.\n\n</string>
    <string name="show_help_getAppClenProcessHELP">\nThis interface is used to terminate the daemon and is implemented based on the IActivityManager service.\n\n1. The menu in the upper right corner can get the program of the host administrator.\n        2. In the lower left corner, you can choose batch and single item.\n        3. The button in the lower right corner, after being clicked, will execute the corresponding rules and parameters.\n        4. Click on the program entry in the list, it will automatically jump to the program information interface, this part needs to be in ROOT mode to use normally.\n        5. The magnifying glass on the left side of the above menu is used to retrieve the application, and the corresponding program list can be retrieved by entering Chinese and English.\n        6. Click on the icon in the top left corner to go back to the previous menu.\n\n</string>
    <string name="text_home_app_manage">Application management</string>
    <string name="text_home_other_tool">Other tool</string>
    <string name="button_home_permission">Permissions Manage</string>
    <string name="button_home_disable">Suspend / Disable</string>
    <string name="button_home_install_local_file">Install Local File</string>
    <string name="button_home_dump_app">Extract App</string>
    <string name="button_home_uninstall">Uninstall App</string>
    <string name="button_home_process_clean">Clean Process</string>
    <string name="button_home_set_ntp">Set NTP Service</string>
    <string name="button_home_set_rate">Modify Rate</string>
    <string name="button_home_del_x">Fix Signal X</string>
    <string name="button_home_file_share">File Share</string>
    <string name="button_home_run_cmd">RunCommand</string>
    <string name="auth_title">Authorization Mode</string>
    <string name="service_status_title">Service Status</string>
    <string name="donate_to_support">Donate to Support</string>
    <string name="donate_to_support_msg">Thank you for your support! Your donation helps keep this project alive.</string>
    <string name="donate_closebt">Close</string>
    <string name="wechat_pay">WeChat Pay</string>
    <string name="alipay">Alipay</string>
    <string name="available_modes">Available Modes</string>
    <string name="authorize_via_shizuku">Authorize via Shizuku</string>
    <string name="authorize_via_dhizuku">Authorize via Dhizuku</string>
    <string name="checking_service_status">Checking service status...</string>
    <string name="button_home_restore_uninstalled">Restore Uninstalled</string>
</resources>